# rtl-generator

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
.github/workflows/: doc.yml  python-publish.yml
dev/: freeze.py
dev/ble_cdr/: ble_cdr.md  ble_cdr.sv  ble_cdr.yml  gen_ble_cdr.py  template_ble_cdr.sv
dev/ble_cdr/clock_recovery/: clock_recovery.md  clock_recovery.sv
dev/ble_cdr/matched_filter/: gen_matched_filter.py  matched_filter.md  matched_filter.sv
dev/ble_cdr/packet_sniffer/: packet_sniffer.md  packet_sniffer.sv
dev/ble_cdr/preamble_detect/: preamble_detect.md  preamble_detect.sv
src/: options.yml  rtl_gen.py  top_level.py
src/rtl_generator/: __init__.py  arguments.py  format.py  generator.py  heirarchy.py
