[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtl_generator"
version = "0.0.1"
authors = [
  { name="Brandon Hippe", email="bhippe@pdx.edu" },
]
description = "Extensible RTL generator/parameterizer written in Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU GPLv3"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/brandonhippe/rtl_generator"
Issues = "https://github.com/brandonhippe/rtl_generator/issues"